Fix layout issues related to editing content
1. It was not possible to edit content by clicking to the right of the
   current content for items shorter than one line.
2. Editing longer items would beak the layout.

--- a/src/static/style.css
+++ b/src/static/style.css
@@ -109,6 +109,11 @@ ul.outline-root-tree {
   margin-bottom: 1rem;
 }
 
+.content {
+  flex: 1;
+  cursor: text;
+}
+
 .content.placeholder-child {
   color: #b0b0b0;
 }
